# libwad

./: CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt  wad.cxx  wad.hxx
source/test/: CMakeLists.txt  test.cxx  test.wad
